# pyqgis_scripting_extensions

./: .gitignore  README.md  pyproject.toml  readme.md
pyqgis_scripting_ext/: core.py
tests/: ne.gpkg  test_ext.py
