[project]
name = "pyqgis-scripting-extensions"
version = "0.1.0"
description = "A simple package that tries to make pyQGIS a bit more userfriendly for non programmers."
authors = [
    {name = "Andrea Antonello", email = "andrea.antonello@gmail.com"},
]
dependencies = [
    
]
requires-python = ">=3.8"
license = {text = "MIT"}

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
